# myNewProject

./: conftest.py  pyproject.toml
docs/: Bug Report.xlsx  HowTo.md
pages/: add_member_page.py  footer_page.py  table_page.py
tests/: report.html  reportNoTryExcept.html  test_add_member.py  test_footer.py  test_table.py
utils/: utils.py
